feat: remove dapps network and new name for Validator network

--- a/docs/smart-contracts/tokens/addresslist.mdx
+++ b/docs/smart-contracts/tokens/addresslist.mdx
@@ -8,10 +8,7 @@ import ContractWSHMV from '@site/src/components/ContractWSHMV.js';
 
 
 
-## Sphinx Validator 1.X Addresses
+## Shardeum Sphinx 1.X Addresses
 
 <ContractWSHMV/>
 
-## Sphinx Dapp 1.X Addresses
-
-<ContractWSHMD/>
