fox: add WS and Graph node

--- a/docs/network/endpoints.mdx
+++ b/docs/network/endpoints.mdx
@@ -22,5 +22,7 @@ import NetworkButton1 from '@site/src/components/NetworkButton1.js';
 | **Chain ID**                      	| 8082                        	
 | **Currency symbol (optional)**    	| SHM                       	
 | **Block Explorer URL (optional)** 	| https://explorer-sphinx.shardeum.org/
+| **WebSocket (WS)**                    | ws://54.88.124.37:8080
+| **Graph Node**                        | http://3.82.105.170:8000/
 
 
