add hackathon network details

--- a/docs/network/endpoints.mdx
+++ b/docs/network/endpoints.mdx
@@ -5,6 +5,19 @@ sidebar_position: 1
 
 # Network Endpoints
 
+## Shardeum Dev Network (Only for Hackathons/Testing)
+
+### Network Details
+
+| **Field**                         	| **Details**               	
+|-----------------------------------	|----------------------------
+| **Network Name**                  	| Shardeum Dev Network
+| **New RPC URL**                   	| https://hackathon.shardeum.org/       
+| **Chain ID**                      	| 8082                        	
+| **Currency symbol**    	| SHM                       	
+| **Block Explorer URL (optional)** 	| https://explorer-hackathon.shardeum.org/
+| **Faucet** 	                        | https://testshm.xyz/
+
 ## Shardeum Sphinx 1.X
 
 ### Connect Wallet
@@ -22,5 +35,6 @@ import NetworkButton1 from '@site/src/components/NetworkButton1.js';
 | **Chain ID**                      	| 8082                        	
 | **Currency symbol**    	| SHM                       	
 | **Block Explorer URL (optional)** 	| https://explorer-sphinx.shardeum.org/
+
 
 
